--- a/acoms/paginas/boletim/boletim.html
+++ b/acoms/paginas/boletim/boletim.html
@@ -8,7 +8,7 @@
   <title>Boletim Escolar</title>
 
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
-  <link rel="stylesheet" href="/paginas/boletim/boletim.css">
+  <link rel="stylesheet" href="/paginas/navbar/telafull.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css.map">
@@ -31,7 +31,7 @@
       </div>
       <a href="/paginas/aluno/aluno.html">INICIO</a>
       <a href="/paginas/boletim/boletim.html">BOLETIM</a>
-      <a href="/paginas/comunicados/comunicados.html">COMUNICADOS</a>
+      <a href="/paginas/comunicados/comunicadosaluno.html">COMUNICADOS</a>
       <a href="/paginas/calendario/calendario.html">CALENDÁRIO</a>
       <a href="/paginas/evento/evento.html">EVENTOS</a>
       <a href="/paginas/login/login_aluno/loginaluno.html">SAIR</a>
@@ -56,7 +56,7 @@
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <p class="text-muted font-size-sm">RM: 12345</p>
                 <p class="text-muted font-size-sm">Série: 3° ano</p>
-                <button class="btn btn-primary" style="font-size: 16px; padding: 5px 13px 5px 13px;">Editar Perfil</button>
+                <button class="btn btn-primary" style="font-size: 16px; padding: 5px 13px 5px 13px;" onclick="location.href='/paginas/aluno/alunoperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
