--- a/acoms/paginas/cadastro/cadastrar_evento/cadastrarevento.html
+++ b/acoms/paginas/cadastro/cadastrar_evento/cadastrarevento.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/cadastro/cadastrar_evento/cadastarevento.css">
+  <link rel="stylesheet" href="/paginas/navbar/telafull.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -37,7 +37,7 @@
         <i class="fas fa-times close-btn"></i>
       </div>
       <a href="/paginas/professor/professor.html">Inicio</a>
-      <a href="#vantagens">Coordenação</a>
+      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoprofessor.html">Coordenação</a>
       <a href="/paginas/cadastro/cadastrar_evento/cadastrarevento.html">Criar Evento</a>
       <a href="/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html">Presença</a>
       <a href="/paginas/cadastro/cadastrar_nota/cadastrarnota.html">Notas</a>
@@ -58,11 +58,11 @@
               <img src="https://www.bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Mascos Antonio</h4>
+                <h4>Marcos Antonio</h4>
                 <b class="text-secondary mb-1" font="black">Professor</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
-                  onclick="location.href='/paginas/responsavel/responsavelperfil.html'">Perfil</button>
+                  onclick="location.href='/paginas/professor/professorperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
