--- a/acoms/paginas/landingpage/landingpage.html
+++ b/acoms/paginas/landingpage/landingpage.html
@@ -31,7 +31,7 @@
 
 
   <header>
-    <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
+    <img src="/img/logofull.png" alt="brand" id="logofull">
     <div class="menu">
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
