--- a/acoms/paginas/planos/planos.html
+++ b/acoms/paginas/planos/planos.html
@@ -17,7 +17,7 @@
 <body>
 
     <header id="cabeca">
-        <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
+        <img src="/img/logofull.png" alt="brand" id="logofull">
         <div class="menu">
             <div class="btn">
                 <i class="fas fa-times close-btn"></i>
@@ -49,14 +49,14 @@
                     <div class="pricing">
                         <div class="price-header">
                             <div class="title">Plano Básico</div>
-                            <div class="price">R$100,00/mês</div>
+                            <div class="price">R$100/mês</div>
                         </div>
                         <div class="content">
                             <ul>
                                 <li>PDF de apoio inicial</li>
-                                <li>1 usuário</li>
+                                <li>Limite de 1 coordenador</li>
                                 <li>Contrato mensal</li>
-                                <li>Sem suporte</li>
+                                <li>Suporte limitado</li>
                             </ul>
                             <div class="button"><a href="/paginas/cartao/cartao.html"
                                     class="btn btn-outline pricing-btn">ADQUIRIR</a></div>
@@ -70,12 +70,12 @@
                         </div>
                         <div class="price-header price-header-2">
                             <div class="title">Plano Profissional</div>
-                            <div class="price">R$200,00/mês</div>
+                            <div class="price">R$500/semestre</div>
                         </div>
                         <div class="content">
                             <ul>
                                 <li>PDF de apoio inicial e ajuda</li>
-                                <li>3 usuários</li>
+                                <li>Até 3 coordenadores</li>
                                 <li>Contrato semestral</li>
                                 <li>Suporte regular</li>
                             </ul>
@@ -88,14 +88,14 @@
                     <div class="pricing">
                         <div class="price-header">
                             <div class="title">Plano VIP</div>
-                            <div class="price">R$300,00/mês</div>
+                            <div class="price">R$900/ano</div>
                         </div>
                         <div class="content">
                             <ul>
                                 <li>PDF de apoio e ajuda prioritaria</li>
-                                <li>5 usuários</li>
+                                <li>5 ou mais coordenadores</li>
                                 <li>Contrato anual</li>
-                                <li>Suporte direto</li>
+                                <li>Suporte 24hrs</li>
                             </ul>
                             <div class="button"><a href="/paginas/cartao/cartao.html"
                                     class="btn btn-outline pricing-btn">ADQUIRIR</a></div>
@@ -105,7 +105,7 @@
             </div>
         </div>
     </section>
-    
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
