--- a/acoms/paginas/chat/chatresponsavelcoordenacao.html
+++ b/acoms/paginas/chat/chatresponsavelcoordenacao.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do responsável</title>
 
-    <link rel="stylesheet" href="/paginas/chat/chatresponsavelcoordenacao.css">
+    <link rel="stylesheet" href="/paginas/navbar/telafull.css">
     <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
     <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -56,7 +56,7 @@
                             <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin"
                                 class="rounded-circle" width="150">
                             <div class="mt-3">
-                                <h4>Silvio Cesar Lopes</h4>
+                                <h4>Samuel</h4>
                                 <b class="text-secondary mb-1" font="black">Responsável</b>
                                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                                 <button class="btn btn-primary"
@@ -182,9 +182,9 @@
                 <div class="chatbox-message-wrapper">
                     <div class="chatbox-message-header" style="background-image: linear-gradient(to right, #4562cc, #089bdf);">
                         <div class="chatbox-message-profile">
-                            <img src="/chat/JACKIECHAN.jpg" alt="" class="chatbox-message-image">
+                            <img src="/paginas/coordenador/coordenador.png" alt="" class="chatbox-message-image">
                             <div>
-                                <h4 class="chatbox-message-name" style="color: white;">Coordenador</h4>
+                                <h4 class="chatbox-message-name" style="color: white;">João Otávio (Coordenador)</h4>
                                 <p class="chatbox-message-status" style="color: white;">online</p>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
             </div>
 
 
-        <script src="/chat/chat.js"></script>
+        <script src="/chat/chat-responsavel.js"></script>
 
 
 
