--- a/acoms/paginas/comunicados/comunicados.html
+++ b/acoms/paginas/comunicados/comunicados.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/comunicados/comunicados.css">
+  <link rel="stylesheet" href="/paginas/navbar/telafull.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -40,8 +40,8 @@
         <i class="fas fa-times close-btn"></i>
       </div>
       <a href="/paginas/responsavel/responsavel.html">Início</a>
-      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
       <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
+      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
       <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
     </div>
     <div class="btn">
@@ -59,7 +59,7 @@
               <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Silvio Cesar Lopes</h4>
+                <h4>Samuel</h4>
                 <b class="text-secondary mb-1" font="black">Responsável</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
