--- a/acoms/paginas/coordenador/coordenadorperfil.html
+++ b/acoms/paginas/coordenador/coordenadorperfil.html
@@ -31,10 +31,10 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/responsavel/responsavel.html">Início</a>
-      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
-      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
-      <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
+      <a href="/paginas/coordenador/coordenador.html">Inicio</a>
+      <a href="/paginas/turma/turma.html">Turmas</a>
+      <a href="/paginas/lista-professores/listaprofessores.html">Professores</a>
+      <a href="/paginas/login/login_coordenacao/logincoordenador.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -47,16 +47,15 @@
       <div class="col-md-4 mb-3">
         <div class="card">
           <div class="card-body">
-
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
+              <img src="/paginas/coordenador/coordenador.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Samuel</h4>
-                <b class="text-secondary mb-1" font="black">Responsável</b>
+                <h4>João Otávio</h4>
+                <b class="text-secondary mb-1" font="black">Coordenador</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
-                  onclick="location.href='/paginas/responsavel/responsavel.html'">Voltar</button>
+                  onclick="location.href='/paginas/coordenador/coordenador.html'">Voltar</button>
               </div>
             </div>
 
@@ -71,7 +70,7 @@
                   <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                   </svg>CPF
                 </h6>
-                <span class="text-secondary">619.884.240-11</span>
+                <span class="text-secondary">917.880.097-89</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                 <h6 class="mb-0"><img src="https://www.svgrepo.com/show/14443/home.svg" width="24" height="24"
@@ -83,7 +82,7 @@
                   </path>
                   </svg>Endereço
                 </h6>
-                <span class="text-secondary">Rua Ipiranga, 865</span>
+                <span class="text-secondary">Rua do Bom Gosto, 750</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                 <h6 class="mb-0"><img src="https://www.svgrepo.com/show/64208/phone.svg" width="24" height="24"
@@ -94,7 +93,7 @@
                   </path>
                   </svg>Celular
                 </h6>
-                <span class="text-secondary">(17) 99130-5063</span>
+                <span class="text-secondary">(17) 99101-2823</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                 <h6 class="mb-0"><img src="https://www.svgrepo.com/show/421106/address-at-contact.svg" width="24"
@@ -106,11 +105,10 @@
                   </path>
                   </svg>E-mail
                 </h6>
-                <span class="text-secondary">samuel.farias@gmail.com</span>
+                <span class="text-secondary">joao.otavio@gmail.com</span>
               </li>
               
             </ul>
-
 
           </div>
         </div>
@@ -128,7 +126,7 @@
                   <h6 class="mb-0">Nome completo</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  <input type="text" class="form-control" value="Samuel Farias">
+                  <input type="text" class="form-control" value="João Otávio">
                 </div>
               </div>
               
@@ -137,7 +135,7 @@
                   <h6 class="mb-0">Data Nascimento</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  <input type="text" class="form-control" value="07/05/1970">
+                  <input type="text" class="form-control" value="22/09/1985">
                 </div>
               </div>
               <div class="row mb-3">
@@ -145,7 +143,7 @@
                   <h6 class="mb-0">E-mail</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  <input type="text" class="form-control" value="samuel.farias@gmail.com">
+                  <input type="text" class="form-control" value="joao.otavio@gmail.com">
                 </div>
               </div>
               <div class="row mb-3">
@@ -161,7 +159,7 @@
                   <h6 class="mb-0">Celular</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  <input type="text" class="form-control" value="(17) 99130-5063">
+                  <input type="text" class="form-control" value="(17) 99101-2823">
                 </div>
               </div>
               <div class="row mb-3">
@@ -169,7 +167,7 @@
                   <h6 class="mb-0">Endereço</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  <input type="text" class="form-control" value="Rua Ipiranga, 865, Fernandópolis">
+                  <input type="text" class="form-control" value="Rua do Bom Gosto, 750, Fernandópolis">
                 </div>
               </div>
               <div class="row">
@@ -180,6 +178,7 @@
               </div>
             </div>
           </div>
+
         </div>
 
       </div>
