--- a/acoms/paginas/login/login_coordenacao/logincoordenador.html
+++ b/acoms/paginas/login/login_coordenacao/logincoordenador.html
@@ -22,7 +22,7 @@
 						<h3>LOGAR</h3>
 						<input type="text" placeholder="RM DE PROFESSOR">
 						<input type="text" placeholder="SENHA">
-						<button class="submit">ENTRAR</button>
+						<button formaction="/paginas/coordenador/coordenador.html" class="submit">ENTRAR</button>
 					</form>
 				</div>
 			</div>
