--- a/acoms/paginas/login/login_escola/loginescola.html
+++ b/acoms/paginas/login/login_escola/loginescola.html
@@ -22,7 +22,7 @@
 						<h3>LOGAR</h3>
 						<input type="text" placeholder="CNPJ">
 						<input type="text" placeholder="SENHA">
-						<button class="submit">ENTRAR</button>
+						<button formaction="/paginas/cadastro/cadastrar_aluno/cadastrar_aluno.html" class="submit">ENTRAR</button>
 					</form>
 				</div>
 			</div>
