--- a/acoms/paginas/login_adm/list_school/list_school.html
+++ b/acoms/paginas/login_adm/list_school/list_school.html
@@ -31,7 +31,7 @@
                                 <div class="ml-2">
                                     <h6 class="mb-0" style="font-size: 20px;">Colégio Anglo</h6>
                                     <div class="d-flex flex-row mt-1 text-black-50 date-time" style="font-size: 15px;">
-                                        <div><i class="fa fa-calendar-o"></i><span class="ml-2">Contrato: R$200,00/mês</span></div>
+                                        <div><i class="fa fa-calendar-o"></i><span class="ml-2">Contrato: R$100,00/mês</span></div>
                                         <div class="ml-3"><i class="fa fa-clock-o"></i><span class="ml-2"></span>
                                         </div>
                                     </div>
@@ -53,7 +53,30 @@
                                 <div class="ml-2">
                                     <h6 class="mb-0" style="font-size: 20px;">Mackenzie</h6>
                                     <div class="d-flex flex-row mt-1 text-black-50 date-time" style="font-size: 15px;">
-                                        <div><i class="fa fa-calendar-o"></i><span class="ml-2">Contrato: R$300,00/mês</span></div>
+                                        <div><i class="fa fa-calendar-o"></i><span class="ml-2">Contrato: R$500,00/semestre</span></div>
+                                        <div class="ml-3"><i class="fa fa-clock-o"></i><span class="ml-2"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-row align-items-center">
+                                <div class="d-flex flex-column mr-2">
+                                    <div class="profile-image"><img class="rounded-circle">
+                                        <button class="btn btn-primary">Ativar</button>
+                                        <button class="btn btn-secondary">suspender</button>
+                                    </div>
+                                </div>
+                                <i class="fa fa-ellipsis-h"></i>
+                            </div>
+                        </li>
+
+                        <li class="d-flex justify-content-between">
+                            <div class="d-flex flex-row align-items-center"><i class="fa fa-check-circle checkicon"></i>
+                                <div class="ml-2">
+                                    <h6 class="mb-0" style="font-size: 20px;">ETEC Fernandópolis</h6>
+                                    <div class="d-flex flex-row mt-1 text-black-50 date-time" style="font-size: 15px;">
+                                        <div><i class="fa fa-calendar-o"></i><span class="ml-2">Contrato:
+                                                R$900,00/ano</span></div>
                                         <div class="ml-3"><i class="fa fa-clock-o"></i><span class="ml-2"></span>
                                         </div>
                                     </div>
