--- a/acoms/paginas/professor/professor.html
+++ b/acoms/paginas/professor/professor.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/professor/professor.css">
+  <link rel="stylesheet" href="/paginas/navbar/telabotao.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
         <i class="fas fa-times close-btn"></i>
       </div>
       <a href="/paginas/professor/professor.html">Inicio</a>
-      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacao.html">Coordenação</a>
+      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoprofessor.html">Coordenação</a>
       <a href="/paginas/cadastro/cadastrar_evento/cadastrarevento.html">Criar Evento</a>
       <a href="/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html">Presença</a>
       <a href="/paginas/cadastro/cadastrar_nota/cadastrarnota.html">Notas</a>
@@ -53,11 +53,11 @@
               <img src="https://www.bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Mascos Antonio</h4>
+                <h4>Marcos Antonio</h4>
                 <b class="text-secondary mb-1" font="black">Professor</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
-                  onclick="location.href='/paginas/responsavel/responsavelperfil.html'">Perfil</button>
+                  onclick="location.href='/paginas/professor/professorperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
@@ -87,20 +87,21 @@
                 <div class="d-flex justify-content-between">
                   <strong class="text-gray-dark" style="font-size: 25px;">3° Infonet</strong>
                   <div class="profile-image"><img class="rounded-circle">
-                    <button class="btn btn-primary" onclick="location.href='/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html'">Presença</button>
-                    <button class="btn btn-primary" onclick="location.href='/paginas/cadastro/cadastrar_nota/cadastrarnota.html'">Nota</button>
-                </div>
+                    <button class="btn btn-primary"
+                      onclick="location.href='/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html'">Presença</button>
+                    <button class="btn btn-primary"
+                      onclick="location.href='/paginas/cadastro/cadastrar_nota/cadastrarnota.html'">Nota</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        
 
         <!--fim for:each-->
 
-        
+
 
       </div>
 
