--- a/acoms/paginas/turma/lista-alunos/listaalunos.html
+++ b/acoms/paginas/turma/lista-alunos/listaalunos.html
@@ -31,10 +31,10 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/responsavel/responsavel.html">Início</a>
-      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
-      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
-      <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
+      <a href="/paginas/coordenador/coordenador.html">Inicio</a>
+      <a href="/paginas/turma/turma.html">Turmas</a>
+      <a href="/paginas/lista-professores/listaprofessores.html">Professores</a>
+      <a href="/paginas/login/login_coordenacao/logincoordenador.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -48,14 +48,13 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
-                width="150">
+              <img src="/paginas/coordenador/coordenador.png" alt="Admin" class="rounded-circle" width="150">
               <div class="mt-3">
-                <h4>Samuel</h4>
-                <b class="text-secondary mb-1" font="black">Responsável</b>
+                <h4>João Otávio</h4>
+                <b class="text-secondary mb-1" font="black">Coordenador</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
-                  onclick="location.href='/paginas/responsavel/responsavelperfil.html'">Perfil</button>
+                  onclick="location.href='/paginas/coordenador/coordenadorperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
@@ -82,7 +81,7 @@
                 <div class="d-flex justify-content-between">
                   <strong class="text-gray-dark">Roberto</strong>
                   <button class="btn btn-primary" id="visualizar"
-                    onclick="location.href='/paginas/responsavel_aluno/responsavelalunoboletim.html'">Visualizar</button>
+                    onclick="location.href='/paginas/turma/lista-alunos/informacao-aluno/informacaoaluno.html'">Visualizar</button>
                 </div>
                 <span class="d-block">Série: 9° ano - Escola: ETEC Fernandópolis</span>
               </div>
@@ -110,14 +109,17 @@
               </div>
             </div>
           </div>
+
         </div>
 
       </div>
 
     </div>
 
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
+  </div>
+
+  <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
 
 </body>
 
