--- a/acoms/paginas/turma/turma.html
+++ b/acoms/paginas/turma/turma.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/navbar/telabotaovisualizar.css">
+  <link rel="stylesheet" href="/paginas/navbar/telabotao.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -31,10 +31,10 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/responsavel/responsavel.html">Início</a>
-      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
-      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
-      <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
+      <a href="/paginas/coordenador/coordenador.html">Inicio</a>
+      <a href="/paginas/turma/turma.html">Turmas</a>
+      <a href="/paginas/lista-professores/listaprofessores.html">Professores</a>
+      <a href="/paginas/login/login_coordenacao/logincoordenador.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -48,14 +48,13 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
-                width="150">
+              <img src="/paginas/coordenador/coordenador.png" alt="Admin" class="rounded-circle" width="150">
               <div class="mt-3">
-                <h4>Samuel</h4>
-                <b class="text-secondary mb-1" font="black">Responsável</b>
+                <h4>João Otávio</h4>
+                <b class="text-secondary mb-1" font="black">Coordenador</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
-                  onclick="location.href='/paginas/responsavel/responsavelperfil.html'">Perfil</button>
+                onclick="location.href='/paginas/coordenador/coordenadorperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
@@ -80,14 +79,18 @@
 
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark">Roberto</strong>
-                  <button class="btn btn-primary" id="visualizar"
-                    onclick="location.href='/paginas/responsavel_aluno/responsavelalunoboletim.html'">Visualizar</button>
+                  <strong class="text-gray-dark" style="font-size: 25px;">3° Infonet</strong>
+                  <div class="profile-image"><img class="rounded-circle">
+                    <button class="btn btn-primary"
+                      onclick="location.href='/paginas/turma/lista-alunos/listaalunos.html'">Visualizar</button>
+                  </div>
                 </div>
-                <span class="d-block">Série: 9° ano - Escola: ETEC Fernandópolis</span>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="mb">
 
           <div class="card mb-3" id="div-informacao">
 
@@ -103,10 +106,11 @@
 
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark">Maria</strong>
-                  <button class="btn btn-primary" id="visualizar" onclick="location.href=''">Visualizar</button>
+                  <strong class="text-gray-dark" style="font-size: 25px;">1° Quimica</strong>
+                  <div class="profile-image"><img class="rounded-circle">
+                    <button class="btn btn-primary" onclick="location.href=''">Visualizar</button>
+                  </div>
                 </div>
-                <span class="d-block">Série: 1° ano - Escola: ETEC Fernandópolis</span>
               </div>
             </div>
           </div>
@@ -116,8 +120,10 @@
 
     </div>
 
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
+  </div>
+
+  <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
 
 </body>
 
