--- a/acoms/paginas/responsavel/responsavel.html
+++ b/acoms/paginas/responsavel/responsavel.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.rtl.min.css.map">
   <link rel="stylesheet" href="/bootstrap/assets/brand/bootstrap-logo-white.svg">
   <link rel="stylesheet" href="/bootstrap/assets/brand/bootstrap-logo.svg">
-  
+
 
 </head>
 
@@ -63,13 +63,12 @@
           </div>
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8 childrensContainer">
 
-        <div class="mb">
-
+        O CONTEUDO DESSA DIV È GERADO DINAMICAMENTE!
+        <!-- <div class="mb">
           <div class="card mb-3" id="div-aluno">
             <div class="d-flex text-muted pt-3">
-
               <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
                 preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -77,7 +76,6 @@
                 <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
                   dy=".3em">32x32</text>
               </svg>
-
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
                   <strong class="text-gray-dark">Roberto</strong>
@@ -86,45 +84,37 @@
                 </div>
                 <span class="d-block">Série: 9° ano - Escola: ETEC Fernandópolis</span>
               </div>
-
             </div>
-
           </div>
-
-          <div class="mb">
-
-            <div class="card mb-3" id="div-aluno">
-              <div class="d-flex text-muted pt-3">
-
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                  preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                    dy=".3em">32x32</text>
-                </svg>
-
-                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                  <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Maria</strong>
-                    <button class="btn btn-primary" id="visualizar">Visualizar</button>
-                  </div>
-                  <span class="d-block">Série: 1° ano - Escola: ETEC Fernandópolis</span>
-                </div>
-
-              </div>
-
-            </div>
-
-
-          </div>
-
-
         </div>
+
+        <div class="mb">
+          <div class="card mb-3" id="div-aluno">
+            <div class="d-flex text-muted pt-3">
+              <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
+                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
+                preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
+                  dy=".3em">32x32</text>
+              </svg>
+              <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                  <strong class="text-gray-dark">Maria</strong>
+                  <button class="btn btn-primary" id="visualizar">Visualizar</button>
+                </div>
+                <span class="d-block">Série: 1° ano - Escola: ETEC Fernandópolis</span>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+
+
       </div>
     </div>
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
+    <script src="botstrap/assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="botstrap/assets/dist/js/bootstrap.bundle.min.js.map"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="/integrationFile/integration.js"></script>
