i forget add logout

--- a/acoms/paginas/aluno/aluno.html
+++ b/acoms/paginas/aluno/aluno.html
@@ -37,7 +37,7 @@
       <a href="/paginas/comunicados/comunicados.html">COMUNICADOS</a>
       <a href="/paginas/calendario/calendario.html">CALENDÁRIO</a>
       <a href="/paginas/evento/evento.html">EVENTOS</a>
-      <a href="/paginas/login/login_aluno/loginaluno.html">SAIR</a>
+      <a class="logout" href="#">SAIR</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
