--- a/acoms/paginas/login_adm/list_school/list_school.html
+++ b/acoms/paginas/login_adm/list_school/list_school.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <script src="/integrationFile/waitLoad.js"></script>
     <div class="container mt-5">
         <h1 class="activity-done">ESCOLAS CADASTRADAS</h1>
         <div class="row">
@@ -22,10 +23,7 @@
                 <div class="d-flex justify-content-between align-items-center activity">
                 </div>
                 <div class="mt-3">
-                    <ul class="list list-inline">
-
-
-
+                    <ul class="list list-inline schoolsContainer">
                         <li class="d-flex justify-content-between">
                             <div class="d-flex flex-row align-items-center"><i class="fa fa-check-circle checkicon"></i>
                                 <div class="ml-2">
@@ -70,14 +68,14 @@
                             </div>
                         </li>
 
-                        
-
-
                     </ul>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="/integrationFile/integration.js"></script>
 </body>
 
 </html>
