--- a/acoms/paginas/responsavel/responsavelperfil.html
+++ b/acoms/paginas/responsavel/responsavelperfil.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/responsavel/responsavel.css">
+  <link rel="stylesheet" href="/paginas/navbar/telafull.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -32,8 +32,8 @@
         <i class="fas fa-times close-btn"></i>
       </div>
       <a href="/paginas/responsavel/responsavel.html">Início</a>
-      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
       <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
+      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
       <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
     </div>
     <div class="btn">
@@ -47,17 +47,71 @@
       <div class="col-md-4 mb-3">
         <div class="card">
           <div class="card-body">
+
             <div class="d-flex flex-column align-items-center text-center">
               <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Silvio Cesar Lopes</h4>
+                <h4>Samuel</h4>
                 <b class="text-secondary mb-1" font="black">Responsável</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
                   onclick="location.href='/paginas/responsavel/responsavel.html'">Voltar</button>
               </div>
             </div>
+
+            <hr class="my-4">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><img src="https://www.svgrepo.com/show/75407/password.svg" width="24" height="24"
+                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" class="feather feather-instagram me-2 icon-inline text-danger">
+                  <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                  <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                  <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                  </svg>CPF
+                </h6>
+                <span class="text-secondary">619.884.240-11</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><img src="https://www.svgrepo.com/show/14443/home.svg" width="24" height="24"
+                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" class="feather feather-globe me-2 icon-inline">
+                  <circle cx="12" cy="12" r="10"></circle>
+                  <line x1="2" y1="12" x2="22" y2="12"></line>
+                  <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
+                  </path>
+                  </svg>Endereço
+                </h6>
+                <span class="text-secondary">Rua Ipiranga, 865</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><img src="https://www.svgrepo.com/show/64208/phone.svg" width="24" height="24"
+                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" class="feather feather-github me-2 icon-inline">
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                  </path>
+                  </svg>Celular
+                </h6>
+                <span class="text-secondary">(17) 99130-5063</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><img src="https://www.svgrepo.com/show/421106/address-at-contact.svg" width="24"
+                    height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-twitter me-2 icon-inline text-info">
+                  <path
+                    d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
+                  </path>
+                  </svg>E-mail
+                </h6>
+                <span class="text-secondary">samuel.farias@gmail.com</span>
+              </li>
+              
+            </ul>
+
+
           </div>
         </div>
       </div>
@@ -68,23 +122,61 @@
 
           <div class="card mb-3" id="div-informacao">
 
-            <div class="d-flex text-muted pt-3">
-
-              <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                  dy=".3em">32x32</text>
-              </svg>
-
-              <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark">Roberto</strong>
-                  <button class="btn btn-primary" id="visualizar"
-                    onclick="location.href='/paginas/aluno/aluno.html'">Visualizar</button>
+            <div class="card-body">
+              <div class="row mb-3">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Nome completo</h6>
                 </div>
-                <span class="d-block">Série: 9° ano - Escola: ETEC Fernandópolis</span>
+                <div class="col-sm-9 text-secondary">
+                  <input type="text" class="form-control" value="Samuel Farias">
+                </div>
+              </div>
+              
+              <div class="row mb-3">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Data Nascimento</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  <input type="text" class="form-control" value="07/05/1970">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">E-mail</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  <input type="text" class="form-control" value="samuel.farias@gmail.com">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Senha</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  <input type="text" class="form-control" value="12345">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Celular</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  <input type="text" class="form-control" value="(17) 99130-5063">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Endereço</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  <input type="text" class="form-control" value="Rua Ipiranga, 865, Fernandópolis">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-9 text-secondary">
+                  <input type="button" class="btn btn-primary px-4" value="Salvar">
+                </div>
               </div>
             </div>
           </div>
