--- a/acoms/paginas/cadastro/cadastrar_coordenador/cadastrar_coordenador.html
+++ b/acoms/paginas/cadastro/cadastrar_coordenador/cadastrar_coordenador.html
@@ -163,7 +163,7 @@
 
     <!--fim for:each-->
 
-    <div class="button_plus"></div>
+    <div class="button_plus" onclick="location.href='/paginas/cadastro/cadastrar_coordenador/cadastrar-coordenador-dados.html'"></div>
 
   </div>
 
