--- a/acoms/paginas/cadastro/cadastrar_professor/cadastrar_professor.html
+++ b/acoms/paginas/cadastro/cadastrar_professor/cadastrar_professor.html
@@ -156,7 +156,7 @@
 
     <!--fim for:each-->
 
-    <div class="button_plus"></div>
+    <div class="button_plus" onclick="location.href='/paginas/cadastro/cadastrar_professor/cadastrar-professor-dados.html'"></div>
 
   </div>
 
