--- a/acoms/paginas/cadastro/cadastrar_responsavel/cadastrar_responsavel.html
+++ b/acoms/paginas/cadastro/cadastrar_responsavel/cadastrar_responsavel.html
@@ -132,7 +132,7 @@
 
     <!--fim for:each-->
 
-    <div class="button_plus"></div>
+    <div class="button_plus" onclick="location.href='/paginas/cadastro/cadastrar_responsavel/cadastrar-responsavel-dados.html'"></div>
 
   </div>
 
