--- a/acoms/paginas/responsavel/responsavelperfil.html
+++ b/acoms/paginas/responsavel/responsavelperfil.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="/img/logomarca.png">
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +25,8 @@
 </head>
 
 <body id="body">
+  <script src="/integrationFile/waitLoad.js"></script>
+
 
 
   <header id="cabeca">
@@ -52,9 +56,9 @@
               <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Samuel</h4>
+                <h4 class="guardianName">Samuel</h4>
                 <b class="text-secondary mb-1" font="black">Responsável</b>
-                <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
+                <p class="text-muted font-size-sm schoolName">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
                   onclick="location.href='/paginas/responsavel/responsavel.html'">Voltar</button>
               </div>
@@ -71,7 +75,7 @@
                   <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                   </svg>CPF
                 </h6>
-                <span class="text-secondary">619.884.240-11</span>
+                <span class="text-secondary guardianCpf">cpf</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                 <h6 class="mb-0"><img src="https://www.svgrepo.com/show/14443/home.svg" width="24" height="24"
@@ -83,7 +87,7 @@
                   </path>
                   </svg>Endereço
                 </h6>
-                <span class="text-secondary">Rua Ipiranga, 865</span>
+                <span class="text-secondary guardianAddress">Rua Ipiranga, 865</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                 <h6 class="mb-0"><img src="https://www.svgrepo.com/show/64208/phone.svg" width="24" height="24"
@@ -189,6 +193,8 @@
     <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="/integrationFile/integration.js"></script>
 </body>
 
 </html>
