fix somethings and start implement chat

--- a/acoms/paginas/chat/chatresponsavelcoordenacao.html
+++ b/acoms/paginas/chat/chatresponsavelcoordenacao.html
@@ -189,7 +189,7 @@
                                 <p class="chatbox-message-status" style="color: white;">online</p>
                             </div>
                         </div>
-                        <div class="chatbox-message-dropdown">
+                        <!-- <div class="chatbox-message-dropdown">
                             <i class='bx bx-dots-vertical-rounded chatbox-message-dropdown-toggle'></i>
                             <ul class="chatbox-message-dropdown-menu">
                                 <li>
@@ -199,7 +199,7 @@
                                     <a href="#">Reportar</a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="chatbox-message-content">
                         <h4 class="chatbox-message-no-message">Você ainda não tem mensagens!</h4>
@@ -218,7 +218,7 @@
                     </div> -->
                     </div>
                     <div class="chatbox-message-bottom" style="background-image: linear-gradient(to right, #4562cc, #089bdf);">
-                        <form action="#" class="chatbox-message-form">
+                        <form action="#" class="chatbox-message-form" id="form">
                             <textarea rows="1" placeholder="Escreva uma mensagem..." class="chatbox-message-input"
                                 cols="50" id="usermsg"></textarea>
                             <button type="submit" class="chatbox-message-submit"><i class='bx bx-send'></i></button>
