--- a/acoms/paginas/responsavel/responsavel.html
+++ b/acoms/paginas/responsavel/responsavel.html
@@ -38,8 +38,8 @@
       <a href="/paginas/responsavel/responsavel.html">Início</a>
       <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
       <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
-      <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
-      <a class="logout" href="#">SAIR</a>
+      <!-- <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a> -->
+      <a class="logout" href="#">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -69,7 +69,7 @@
 
       <div class="col-md-8 childrensContainer">
 
-        O CONTEUDO DESSA DIV È GERADO DINAMICAMENTE!
+        <!-- O CONTEUDO DESSA DIV È GERADO DINAMICAMENTE! -->
         <!-- <div class="mb">
           <div class="card mb-3" id="div-aluno">
             <div class="d-flex text-muted pt-3">
