--- a/acoms/paginas/login/login_professor/loginprofessor.html
+++ b/acoms/paginas/login/login_professor/loginprofessor.html
@@ -20,7 +20,7 @@
 			<div class="left">
 				<div class="top_link"><a href="/paginas/login-select/loginpage.html" alt="">Voltar para seleção</a></div>
 				<div class="contact">
-					<form action="">
+					<form>
 						<h3>LOGAR</h3>
 						<span id="errologin" style="color: red; display: none;">login invalido! tente novamente</span>
 
