--- a/acoms/paginas/login_adm/list_school/list_school.html
+++ b/acoms/paginas/login_adm/list_school/list_school.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="mt-3">
                     <ul class="list list-inline schoolsContainer">
-                        <li class="d-flex justify-content-between">
+                        <!-- <li class="d-flex justify-content-between">
                             <div class="d-flex flex-row align-items-center"><i class="fa fa-check-circle checkicon"></i>
                                 <div class="ml-2">
                                     <h6 class="mb-0" style="font-size: 20px;">Colégio Anglo</h6>
@@ -66,7 +66,7 @@
                                 </div>
                                 <i class="fa fa-ellipsis-h"></i>
                             </div>
-                        </li>
+                        </li> -->
 
                     </ul>
                 </div>
