--- a/acoms/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html
+++ b/acoms/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html
@@ -35,7 +35,7 @@
             </div>
             <a href="/paginas/responsavel/responsavel.html">Início</a>
             <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
-            <a href="/paginas/comuni\cados/comunicados.html">Comunicados</a>
+            <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
             <a class="logout" href="#">SAIR</a>
         </div>
         <div class="btn">
@@ -53,7 +53,7 @@
                             <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin"
                                 class="rounded-circle" width="150">
                             <div class="mt-3">
-                                <h4 class="guardianName">Samuel</h4>
+                                <h4 class="guardianName">nenhum usuario logado</h4>
                                 <b class="text-secondary mb-1" font="black">Responsável</b>
                                 <p class="text-muted font-size-sm schoolName">ETEC Prof. Armando josé Farinazzo</p>
                                 <button class="btn btn-primary"
