--- a/acoms/paginas/comunicados/comunicados.html
+++ b/acoms/paginas/comunicados/comunicados.html
@@ -60,7 +60,7 @@
               <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Samuel</h4>
+                <h4 class="guardianName">nenhum usuario logado</h4>
                 <b class="text-secondary mb-1" font="black">Responsável</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
