--- a/acoms/paginas/responsavel_aluno/responsavelalunocalendario.html
+++ b/acoms/paginas/responsavel_aluno/responsavelalunocalendario.html
@@ -74,7 +74,7 @@
                             <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin"
                                 class="rounded-circle" width="150" style="margin-bottom: -10px;">
                             <div class="mt-3">
-                                <h4 style="font-size: 25px; margin-bottom: 1px;">Samuel</h4>
+                                <h4 class="guardianName" style="font-size: 25px; margin-bottom: 1px;">nenhum usuario logado</h4>
                                 <b class="text-secondary mb-1" font="black">Responsável</b>
                                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                                 <button class="btn btn-primary"
